--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
         }
     ],
     "require": {
+        "psr/log": "^1.0 || ^2.0 || ^3.0",
         "php": ">=7.3",
         "nesk/rialto": "^1.2.0",
-        "psr/log": "^1.0",
         "vierbergenlars/php-semver": "^3.0.2"
     },
     "require-dev": {
